[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "genai"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Framework/lib deps — ranges (genai is a connection library, not an app).
    "requests>=2.32.5,<3",
    # grpcio: pinned exactly — tight ABI/wheel coupling with protobuf; upstream
    # open-aea / open-autonomy also exact-pin this across the Valory fleet.
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "protobuf<6,>=5",
    "hypothesis>=6,<7",
    "ecdsa>=0.15",
    "pytest>=8,<10",
    "pytest-asyncio>=1.3,<2",
    # genai/x402 connection runtime deps (actual imports in packages/).
    "hexbytes>=1.3,<2",
    "typing-extensions>=4.13.2",
    "httpx>=0.23,<1",
    "google-generativeai>=0.8,<0.9",
    "openai>=1.93,<2",
    "pydantic>=2.11.9,<3",
    "pip>=24.0",
]

[project.optional-dependencies]
all = []

[project.urls]
Repository = "https://github.com/valory-xyz/genai"

[dependency-groups]
dev = [
    "tomte[tox, cli, tests]==0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
